fixes button size on mobile

--- a/src/styles/SearchForm.css
+++ b/src/styles/SearchForm.css
@@ -50,4 +50,8 @@
   .search-form>button {
     height: 44px;
   }
+
+  .search-form>input {
+    height: 44px;
+  }
 }
